@@ -1,4 +1,12 @@
-SUBDIRS = bufspeed memchunk muxing sched
+# This directory depends on an x86 computer, so if nasm is present, we're good
+# complain to hadess@hadess.net
+if HAVE_NASM
+NASMDEP_DIR=bufspeed memchunk
+else
+NASMDEP_DIR=
+endif
+
+SUBDIRS = $(NASMDEP_DIR) muxing sched
 
 noinst_PROGRAMS = lat
 
