@@ -1,3 +1,8 @@
+2002-01-15  Bastien Nocera  <hadess@hadess.net>
+
+	* tests/Makefile.am: dodge compiling memchunk and bufspeed
+	if NASM is not present
+
 2002-01-03 Rodney Dawes  <dobey@free.fr>
 
 	* gstreamer.spec.in: Fixed the missing plug-ins problem
